Fixed issues as reported by Nikita
