# VendingMachine.Web/swagger.json
@@ -5,6 +5,11 @@
     "title": "My Title",
     "version": "1.0.0"
   },
+  "produces": [
+    "text/plain",
+    "application/json",
+    "text/json"
+  ],
   "paths": {
     "/VendingMachine/GetMachineState": {
       "get": {
@@ -13,11 +18,6 @@
         ],
         "summary": "Gets the current client side machine state for its use in a UI",
         "operationId": "VendingMachine_GetMachineState",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
         "responses": {
           "200": {
             "x-nullable": false,
@@ -47,10 +47,10 @@
         ],
         "responses": {
           "200": {
-            "x-nullable": true,
+            "x-nullable": false,
             "description": "",
             "schema": {
-              "type": "file"
+              "type": "boolean"
             }
           }
         }
@@ -63,11 +63,6 @@
         ],
         "summary": "Returns coins inserted in the machine by the user",
         "operationId": "VendingMachine_ReturnCoins",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
         "responses": {
           "200": {
             "x-nullable": false,
@@ -90,11 +85,6 @@
         ],
         "summary": "Sells a product to the customer.",
         "operationId": "VendingMachine_SellProduct",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
         "parameters": [
           {
             "type": "string",
@@ -130,6 +120,13 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/Product"
+          }
+        },
+        "availableCoins": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       }
